[project]
name = "duplicateimagefinder"
version = "0.1.0"
description = "Duplicate image finder, initially AI generated"
authors = [
    {name = "jshriver67",email = "justin.shriver@gmail.com"}
]
license = {text = "GNU"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pillow (>=11.2.1,<12.0.0)",
    "imagehash (>=4.3.2,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
